# knowledge_net

./: .gitignore  Dockerfile  KnowledgeNet.excalidraw  LICENSE  README.md  nginx.conf  start.sh
backend/: .example.env  app.py  crawl_ai.py  example.md  knet.py  output.json  pyproject.toml  requirements.txt  research_node.py  scraper.py  similarity_metrics.py
frontend/: .example.env  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: ChatHistory.tsx  ChatInterface.tsx  Message.tsx  MessageInput.tsx  ResearchControls.tsx
frontend/src/components/ui/: ChatLayout.tsx  ConversationList.tsx  ThemeToggle.tsx  alert.tsx  dialog.tsx  scroll-area.tsx  sheet.tsx  tabs.tsx  textarea.tsx
frontend/src/components/visualizations/: ResearchGraph.tsx
frontend/src/lib/: socket.ts  types.ts
frontend/src/lib/store/: ChatContext.tsx
langgraph_backend/: agent_tools.py  app.py  app_tools.py  prompts.py  pyproject.toml  research_node.py  schema.py  scraper.py  tools_tools.py
